# vibetree

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  vibetree.toml
.beads/: issues.jsonl
src/: allocator.rs  cli.rs  completions.rs  config.rs  display.rs  env.rs  git.rs  lib.rs  main.rs  ports.rs  sync.rs  template.rs  validation.rs
tests/: integration_tests.rs
