[package]
name = "vibetree"
version = "0.2.0"
edition = "2024"

[lib]
name = "vibetree"
path = "src/lib.rs"

[[bin]]
name = "vibetree"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
git2 = { version = "0.20.2", default-features = false, features = ["vendored-openssl"] }
libc = "0.2"
log = "0.4.27"
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
toml = "0.9.4"

[dev-dependencies]
tempfile = "3.20.0"
